force-app/main/default/objects/ffirule__IntegrationRuleSettings__c/ffirule__IntegrationRuleSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>FinancialForce ClickLink settings</description>
    <label>ClickLink Settings</label>
</CustomObject>