force-app/main/default/objects/ffirule__IntegrationRuleSettings__c/fields/ffirule__LicenseKey__c.field-meta.xml
<CustomField>
    <fullName>ffirule__LicenseKey__c</fullName>
    <label>License Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>