force-app/main/default/objects/ffirule__IntegrationRuleSettings__c/fields/ffirule__SyncEnabled__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SyncEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the ClickLink synchronization feature is enabled for the organization. When false, the ClickLink synchronization feature is disabled for the whole organization. The default value is true.</description>
    <label>Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>